# JPEG-XL-Lossy-Image-Compression-Thesis

./: .gitignore  README.md  old_test_jxl.py  test_jxl.py
benchmark-jpegxl/: .gitignore  .notes.swp  Cargo.toml  Dockerfile
benchmark-jpegxl/benchmarks/0/results/comp/: results.csv
benchmark-jpegxl/benchmarks/0/results/orig/: results.csv
benchmark-jpegxl/benchmarks/1/results/comp/: results.csv
benchmark-jpegxl/benchmarks/1/results/orig/: results.csv
benchmark-jpegxl/benchmarks/17/results/comp/: comparisons.csv  results.csv
benchmark-jpegxl/benchmarks/17/results/orig/: results.csv
benchmark-jpegxl/benchmarks/2/results/comp/: results.csv
benchmark-jpegxl/benchmarks/2/results/orig/: results.csv
benchmark-jpegxl/src/: benchmark.rs  config.rs  context.rs  csv_writer.rs  docker_manager.rs  image_reader.rs  lib.rs  main.rs  metrics.rs  utils.rs
benchmark-jpegxl/tests/: metrics_tests.rs
proposals/: combined.diff  homogeneity-factored-entropy.diff  homogeneity-partitioning.diff
