[package]
name = "benchmark-jpegxl"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["rlib"]

[[bin]]
name = "benchmark-jpegxl"
path = "src/main.rs"

[dependencies]
approx = "0.5.1"
clap = "4.4.16"
clap_derive = "4.4.7"
csv = "1.3.0"
image = "0.24.8"
jpegxl-rs = "0.8.3"
serde = "1.0.195"
serde_derive = "1.0.195"
